--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,7 @@
             android:id="@+id/appTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Todo App"
+            android:text="@string/main_title"
             android:layout_marginTop="35dp"
             android:layout_marginBottom="10dp"
             android:textSize="28sp"
