--- a/app/src/main/res/layout/fragment_main_task.xml
+++ b/app/src/main/res/layout/fragment_main_task.xml
@@ -6,17 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".MainTaskFragment">
 
-    <!-- ConstraintLayout para organizar los elementos -->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <!-- Título en la parte superior -->
         <TextView
             android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Mis tareas"
+            android:text="@string/my_task"
             android:textSize="24sp"
             android:textStyle="bold"
             android:textColor="@color/purple_500"
@@ -25,7 +23,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="24dp" />
 
-        <!-- ProgressBar opcional -->
         <ProgressBar
             android:id="@+id/pb_tasks"
             style="?android:attr/progressBarStyle"
@@ -40,7 +37,6 @@
             android:layout_marginTop="16dp"
             tools:visibility="visible" />
 
-        <!-- RecyclerView en la parte central -->
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/taskRecyclerView"
             android:layout_width="0dp"
@@ -52,7 +48,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
-        <!-- Layout con fondo blanco para el botón -->
         <LinearLayout
             android:id="@+id/completedTasksLayout"
             android:layout_width="match_parent"
@@ -68,13 +63,12 @@
                 android:id="@+id/viewCompletedTasksButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Ver tareas completadas"
+                android:text="@string/view_completed_task_button"
                 android:textSize="18sp"
                 android:backgroundTint="@color/purple_200"
                 android:textColor="@android:color/white" />
         </LinearLayout>
 
-        <!-- FAB para agregar una nueva tarea -->
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/fabAddTask"
             android:layout_width="wrap_content"
