--- a/app/src/main/res/layout/fragment_task_completed.xml
+++ b/app/src/main/res/layout/fragment_task_completed.xml
@@ -5,17 +5,16 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".TaskCompletedFragment">
-    <!-- ConstraintLayout para organizar los elementos -->
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <!-- Título en la parte superior -->
         <TextView
             android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Tareas Completadas"
+            android:text="@string/completed_task_title"
             android:textSize="24sp"
             android:textStyle="bold"
             android:textColor="@color/purple_500"
@@ -24,7 +23,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="24dp" />
 
-        <!-- ProgressBar opcional -->
         <ProgressBar
             android:id="@+id/pb_tasks"
             style="?android:attr/progressBarStyle"
@@ -39,7 +37,6 @@
             android:layout_marginTop="16dp"
             tools:visibility="visible" />
 
-        <!-- RecyclerView en la parte central -->
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/taskRecyclerView"
             android:layout_width="0dp"
@@ -51,7 +48,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
-        <!-- Layout con fondo blanco para el botón -->
         <LinearLayout
             android:id="@+id/completedTasksLayout"
             android:layout_width="match_parent"
@@ -67,7 +63,7 @@
                 android:id="@+id/viewTasksButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Ver Mis Tareas"
+                android:text="@string/view_my_task_button"
                 android:textSize="18sp"
                 android:backgroundTint="@color/purple_200"
                 android:textColor="@android:color/white" />
