--- a/app/src/main/res/layout/task_completed_view.xml
+++ b/app/src/main/res/layout/task_completed_view.xml
@@ -31,7 +31,7 @@
                 android:id="@+id/task_id"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="1"
+                android:text="@string/task_id"
                 android:textColor="@color/black"
                 android:textStyle="bold"
                 android:textSize="18sp"
@@ -41,7 +41,7 @@
                 android:id="@+id/task_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Título de la tarea"
+                android:text="@string/detail_task_title"
                 android:textColor="@color/black"
                 android:textStyle="bold"
                 android:textSize="18sp"
